--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@
     margin-top: 10px
 }
 
-.Box-1 {
+.level {
     text-align: center;
     font-size: 20px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px;
@@ -217,7 +217,7 @@
     font-size: 20px;
 }
 
-.Box-2 {
+.developer-section {
     display: flex;
     gap: 20px;
     border-radius: 30px;
@@ -276,14 +276,15 @@
     /* overflow: hidden; */
 }
 
-.Box-3 {
+.skill-section {
     padding-left: 100px;
     margin-top: 40px;
     font-size: 25px;
 }
 
-.Box-3 h1 {
+.skill-section h1 {
     padding-bottom: 30px;
+    font-size: 48px;
 }
 
 .skill-list {
@@ -374,14 +375,14 @@
 
 }
 
-.Box-4 {
+.experience-section {
     display: flex;
     width: 90%;
     padding-left: 80px;
     padding-top: 20px;
 }
 
-.company1 {
+.google {
     display: flex;
     /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     box-shadow: 0px 8px 40px 0px #0000001A;
